@startuml
'https://plantuml.com/class-diagram

'Main entrypoint

class App {
    +{static} void main(String[] args)
    +void start(Stage primaryStage)
}

'Views
package views {
    class ItemView {
        +{static} Node createItem(Item item)
        +{static} Node createEditableItem(Item item)
    }
}

'Controllers
package controllers {
    class ListController {
        #TextField textField
        #DatePicker datePicker

        +void handleAddItem(ActionEvent event)
    }

    class ItemController {
        -Item item

        #HBox self
        #Label taskDescription
        #Label dueDate
        #CheckBox checkBox

        +void initialize()
        +void handleEditItem(ActionEvent event)
        +void handleDeleteButton(ActionEvent event)
        +void handleCheck(ActionEvent event)
    }

    class EditableListItemController {
        -Item item

        #HBox self
        #TextField textField
        #DatePicker datePicker
        #CheckBox checkBox

        +void initialize()
        +void handleSave(ActionEvent event)
        +void handleCheck(ActionEvent event)
        +void handleDeleteButton(ActionEvent event)
    }

    class FileMenuController {
        +void handleOpen(ActionEvent event)
        +void handleSave(ActionEvent event)
        +void handleQuit(ActionEvent event)
    }

    class EditMenuController {
        +void handleClearList()
    }

    class ViewMenuController {
        -{static} CurrentState state

        +void handleViewAllItems(ActionEvent event)
        +void handleViewIncompleteItems(ActionEvent event)
        +void handleViewCompletedItems(ActionEvent event)
        +{static} void renderItems()
        +{static} CurrentState getCurrentState()
        #{static} ObservableList<Node> getListItems()
    }

    enum ViewMenuController.CurrentState {
        VIEW_ALL_ITEMS
        VIEW_INCOMPLETE_ITEMS
        VIEW_COMPLETED_ITEMS
    }

    ViewMenuController *-- ViewMenuController.CurrentState
    ViewMenuController o-- FileMenuController
    ViewMenuController o-- EditableListItemController
    ViewMenuController o-- ItemController
    ViewMenuController o-- ListController

}

'Models

package models {

    class List {
        -ArrayList<Item> items
        +{static} String RECORD_SEPARATOR

        +void addItem(Item toAdd)
        +Item getItem(int id)
        +void removeItem(int id)
        +void clearList()
        +void saveList()
        {static} +List loadList(Path filePath)

        +ArrayList<Item> getAllItems()
        +ArrayList<Item> getIncompleteItems()
        +ArrayList<Item> getCompletedItems()

        -int getItemIndex(int id)
        -String serialize()
        -{static} List deserialize()
    }

    class Item {
        int id
        -{static} lastID
        String description
        String dueDate
        boolean completed

        +int getID()
        +String getDescription()
        +String getDueDate()
        +boolean getCompleted()
        +void setDescription(String newDescription)
        +void setDueDate(String newDueDate)
        +void setCompleted(boolean newCompleted)
    }

    List *-- Item
}

'Cross-Package dependencies
List o-- ListController
List o-- FileMenuController
List o-- EditMenuController
List o-- ItemController
List o-- EditableListItemController
List o-- ViewMenuController

ItemView o-- ListController
ItemView o-- ItemController
ItemView o-- EditableListItemController

App *-- List


@enduml